versioned_docs/version-2.30/reference/subsystems/python-protobuf.mdx
---
title: python-protobuf
description: |
  Options related to the Protobuf Python backend.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options related to the Protobuf Python backend.

See https://www.pantsbuild.org/2.30/docs/python/integrations/protobuf-and-grpc.

Backend: <span className="color--primary">`pants.backend.codegen.protobuf.python`</span>

Config section: <span className="color--primary">`[python-protobuf]`</span>

<span className={styles.options}>

## Basic options

### `generate_type_stubs`

<Option
  cli_repr={`--[no-]python-protobuf-generate-type-stubs`}
  env_repr='PANTS_PYTHON_PROTOBUF_GENERATE_TYPE_STUBS'
  toml_repr={`[python-protobuf]
generate_type_stubs = <bool>`}
  default_repr={`False`}
>

If True, then configure `protoc` to also generate `.pyi` type stubs for each generated Python file. This option will work wih any recent version of `protoc` and should be preferred over the `--python-protobuf-mypy-plugin` option.

</Option>

### `grpcio_plugin`

<Option
  cli_repr={`--[no-]python-protobuf-grpcio-plugin`}
  env_repr='PANTS_PYTHON_PROTOBUF_GRPCIO_PLUGIN'
  toml_repr={`[python-protobuf]
grpcio_plugin = <bool>`}
  default_repr={`True`}
>

Use the official `grpcio` plugin (https://pypi.org/project/grpcio/) to generate grpc service stubs.

</Option>

### `grpclib_plugin`

<Option
  cli_repr={`--[no-]python-protobuf-grpclib-plugin`}
  env_repr='PANTS_PYTHON_PROTOBUF_GRPCLIB_PLUGIN'
  toml_repr={`[python-protobuf]
grpclib_plugin = <bool>`}
  default_repr={`False`}
>

Use the alternative `grpclib` plugin (https://github.com/vmagamedov/grpclib) to generate grpc service stubs.

</Option>

### `mypy_plugin`

<Option
  cli_repr={`--[no-]python-protobuf-mypy-plugin`}
  env_repr='PANTS_PYTHON_PROTOBUF_MYPY_PLUGIN'
  toml_repr={`[python-protobuf]
mypy_plugin = <bool>`}
  default_repr={`False`}
>

Use the `mypy-protobuf` plugin (https://github.com/dropbox/mypy-protobuf) to also generate `.pyi` type stubs.

Please prefer the `--python-protobuf-generate-type-stubs` option over this option since recent versions of `protoc` have the ability to directly generate type stubs.

</Option>

## Advanced options

### `infer_runtime_dependency`

<Option
  cli_repr={`--[no-]python-protobuf-infer-runtime-dependency`}
  env_repr='PANTS_PYTHON_PROTOBUF_INFER_RUNTIME_DEPENDENCY'
  toml_repr={`[python-protobuf]
infer_runtime_dependency = <bool>`}
  default_repr={`True`}
>

If True, will add a dependency on a `python_requirement` target exposing the `protobuf` module (usually from the `protobuf` requirement). If the `protobuf_source` target sets `grpc=True`, will also add a dependency on the `python_requirement` target exposing the `grpcio` module.

If `[python].enable_resolves` is set, Pants will only infer dependencies on `python_requirement` targets that use the same resolve as the particular `protobuf_source` / `protobuf_sources` target uses, which is set via its `python_resolve` field.

Unless this option is disabled, Pants will error if no relevant target is found or if more than one is found which causes ambiguity.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
